--- a/Jungnami/Jungnami/SJ/Storyboard/Base.lproj/Main.storyboard
+++ b/Jungnami/Jungnami/SJ/Storyboard/Base.lproj/Main.storyboard
@@ -954,6 +954,21 @@
             </objects>
             <point key="canvasLocation" x="-849" y="806"/>
         </scene>
+        <!--SplashVC-->
+        <scene sceneID="qn5-hx-Rlb">
+            <objects>
+                <viewController storyboardIdentifier="SplashVC" id="M40-O2-xIU" customClass="SplashVC" customModule="Jungnami" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Zdh-vy-q5L">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <viewLayoutGuide key="safeArea" id="q6E-LD-8k6"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="V4v-4K-r4p" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2623" y="479"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="1rR-YC-SWW">
             <objects>
