--- a/Jungnami/Jungnami/SJ/VC/MypageScroll/OtherUserPageScroll/OtherUserHeader.xib
+++ b/Jungnami/Jungnami/SJ/VC/MypageScroll/OtherUserPageScroll/OtherUserHeader.xib
@@ -35,22 +35,31 @@
                                         <constraint firstAttribute="width" constant="76" id="ert-OA-mTy"/>
                                     </constraints>
                                 </imageView>
-                                <button opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZUe-HA-NVx" userLabel="backBtn">
-                                    <rect key="frame" x="12" y="11" width="24" height="24"/>
-                                    <constraints>
-                                        <constraint firstAttribute="height" constant="24" id="Hti-wT-Iji"/>
-                                        <constraint firstAttribute="width" constant="24" id="umw-H6-1mO"/>
-                                    </constraints>
-                                    <state key="normal" image="content_x"/>
-                                </button>
+                                <navigationBar clipsSubviews="YES" contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TvK-Fz-g1k">
+                                    <rect key="frame" x="0.0" y="0.0" width="649" height="44"/>
+                                    <color key="barTintColor" red="0.97647058819999999" green="0.97647058819999999" blue="0.98431372549999996" alpha="1" colorSpace="calibratedRGB"/>
+                                    <items>
+                                        <navigationItem id="Ab0-9A-Pqg">
+                                            <barButtonItem key="leftBarButtonItem" style="plain" id="SMh-b5-1af">
+                                                <button key="customView" opaque="NO" contentMode="scaleAspectFit" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="ZUe-HA-NVx" userLabel="backBtn">
+                                                    <rect key="frame" x="20" y="10" width="24" height="24"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="24" id="Hti-wT-Iji"/>
+                                                        <constraint firstAttribute="width" constant="24" id="umw-H6-1mO"/>
+                                                    </constraints>
+                                                    <state key="normal" image="content_x"/>
+                                                </button>
+                                            </barButtonItem>
+                                        </navigationItem>
+                                    </items>
+                                </navigationBar>
                             </subviews>
                             <color key="backgroundColor" red="0.97647058819999999" green="0.97647058819999999" blue="0.98431372549999996" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="bottom" secondItem="Weq-p6-kPD" secondAttribute="bottom" id="GUU-bM-Abs"/>
                                 <constraint firstItem="eNH-Ht-yhG" firstAttribute="top" secondItem="tPK-fh-8hU" secondAttribute="top" constant="66" id="L2a-Sl-QcC"/>
                                 <constraint firstItem="eNH-Ht-yhG" firstAttribute="centerX" secondItem="tPK-fh-8hU" secondAttribute="centerX" id="NoO-8D-WNY"/>
-                                <constraint firstItem="ZUe-HA-NVx" firstAttribute="leading" secondItem="tPK-fh-8hU" secondAttribute="leading" constant="12" id="ONP-ps-Gvp"/>
-                                <constraint firstItem="ZUe-HA-NVx" firstAttribute="top" secondItem="tPK-fh-8hU" secondAttribute="top" constant="11" id="gZ6-74-b9s"/>
                                 <constraint firstItem="Weq-p6-kPD" firstAttribute="leading" secondItem="tPK-fh-8hU" secondAttribute="leading" id="iZ2-KJ-ern"/>
                                 <constraint firstAttribute="height" constant="104" id="vKy-BV-8jb"/>
                                 <constraint firstAttribute="trailing" secondItem="Weq-p6-kPD" secondAttribute="trailing" id="vtH-2H-MV8"/>
@@ -88,7 +97,7 @@
                                     <rect key="frame" x="0.0" y="0.0" width="29" height="31.5"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QQF-Ec-kvh">
-                                            <rect key="frame" x="9" y="0.0" width="10.5" height="18"/>
+                                            <rect key="frame" x="9.5" y="0.0" width="10.5" height="18"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                             <color key="textColor" red="0.16862745100000001" green="0.16862745100000001" blue="0.16862745100000001" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
                                             <nil key="highlightedColor"/>
@@ -122,7 +131,7 @@
                                     <rect key="frame" x="130.5" y="0.0" width="29" height="31.5"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LSs-ET-TDd">
-                                            <rect key="frame" x="9" y="0.0" width="10.5" height="18"/>
+                                            <rect key="frame" x="9.5" y="0.0" width="10.5" height="18"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                             <color key="textColor" red="0.16862745100000001" green="0.16862745100000001" blue="0.16862745100000001" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
                                             <nil key="highlightedColor"/>
@@ -139,7 +148,7 @@
                                     <rect key="frame" x="200.5" y="0.0" width="29" height="31.5"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Jp-wt-wX5">
-                                            <rect key="frame" x="9" y="0.0" width="10.5" height="18"/>
+                                            <rect key="frame" x="9.5" y="0.0" width="10.5" height="18"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                             <color key="textColor" red="0.16862745100000001" green="0.16862745100000001" blue="0.16862745100000001" alpha="1" colorSpace="custom" customColorSpace="adobeRGB1998"/>
                                             <nil key="highlightedColor"/>
@@ -183,6 +192,9 @@
                 <constraint firstItem="EQj-5d-CgR" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="GN3-2I-EKZ"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="EQj-5d-CgR" secondAttribute="bottom" id="GRa-4E-MUo"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="Idv-Nb-Kbp" secondAttribute="bottom" id="OTh-Be-3tl"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="leading" secondItem="TvK-Fz-g1k" secondAttribute="leading" id="Ujp-LI-uOB"/>
+                <constraint firstItem="TvK-Fz-g1k" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="VgW-Wb-Z8C"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="TvK-Fz-g1k" secondAttribute="trailing" id="WjQ-Es-HSn"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Idv-Nb-Kbp" secondAttribute="trailing" id="boA-pM-qNB"/>
                 <constraint firstItem="Idv-Nb-Kbp" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="im5-V1-Ffe"/>
                 <constraint firstItem="Idv-Nb-Kbp" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="jmD-wK-Ua7"/>
@@ -191,6 +203,7 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <connections>
                 <outlet property="dismissBtn" destination="ZUe-HA-NVx" id="LKX-OX-RXh"/>
+                <outlet property="navBar" destination="TvK-Fz-g1k" id="aZt-LA-J7L"/>
                 <outlet property="otherUserFollowBtn" destination="MQf-Lr-RyF" id="egE-gY-P12"/>
                 <outlet property="profileFollowerNumLbl" destination="6Jp-wt-wX5" id="17Q-CD-gR3"/>
                 <outlet property="profileFollowingNumLbl" destination="LSs-ET-TDd" id="dqL-eJ-pEi"/>
