--- a/Jungnami/Jungnami/SJ/Storyboard/Base.lproj/LaunchScreen.storyboard
+++ b/Jungnami/Jungnami/SJ/Storyboard/Base.lproj/LaunchScreen.storyboard
@@ -16,7 +16,18 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="splash" translatesAutoresizingMaskIntoConstraints="NO" id="25O-Bn-jKe">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="25O-Bn-jKe" secondAttribute="trailing" id="3TK-xZ-EwB"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="25O-Bn-jKe" secondAttribute="bottom" id="He9-jE-bwl"/>
+                            <constraint firstItem="25O-Bn-jKe" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="R5o-xA-NzC"/>
+                            <constraint firstItem="25O-Bn-jKe" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Yul-rS-uX6"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
@@ -25,4 +36,7 @@
             <point key="canvasLocation" x="53" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="splash" width="375" height="667"/>
+    </resources>
 </document>
