--- a/Jungnami/Jungnami/SJ/Storyboard/Base.lproj/Main.storyboard
+++ b/Jungnami/Jungnami/SJ/Storyboard/Base.lproj/Main.storyboard
@@ -884,7 +884,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="mTS-PJ-XSP" firstAttribute="leading" secondItem="f2T-gA-f9n" secondAttribute="trailing" constant="16" id="4dJ-YM-ELb"/>
                             <constraint firstItem="beX-jj-QLb" firstAttribute="centerX" secondItem="92y-tT-hgg" secondAttribute="centerX" id="6az-1N-ZR4"/>
